--- a/sass/navigation/_menu-main-navigation.scss
+++ b/sass/navigation/_menu-main-navigation.scss
@@ -17,7 +17,7 @@
 	@include media(tablet-down) {
 		width: 100%;
 			text-align: left;
-			padding-top: 20px;
+			padding-top: 30px;
 	}
 
 
